--- a/src/components/sass/card.scss
+++ b/src/components/sass/card.scss
@@ -5,7 +5,7 @@ h1{
     // width: 100vw;
     // height: 90vh;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     // grid-template-rows: 1fr 1fr 1fr;
     column-gap: 1rem;
     row-gap: 1rem;
@@ -16,44 +16,57 @@ h1{
 .card{    
     .card-main{
         border-radius: 1rem;
-        width: 350px;
-        height: 550px;
+        width: 200px;
+        height: 350px;
         background-color: darken(aqua,40);
+        padding: 1rem;
 
         .card-img{
-            width: 350px;
-            height: 400px;
+            width: 200px;
+            height: 250px;
             overflow: hidden;
-            // object-fit: contain;
-            border-bottom: 2px solid black;
+            // border-bottom: 2px solid black;
+            object-fit: fill;
+            display: flex;
+            justify-content: center;
             border-radius: 1rem;
             
             .img{
+                border-radius: 1rem;
                 width: 100%;
                 height: 100%;
 
             }
         }
-        .card-title{
-            font-size: 3.5rem;
-            color: black;
+        .text{
             display: flex;
             justify-content: center;
-            // margin: .3rem;
+            flex-direction: column;
 
-            &:hover{
-                color: green
+            .card-title{
+                font-size: 2rem;
+                color: black;
+                display: flex;
+                justify-content: center;
+                // margin: .3rem;
+                
+                
+                
             }
-
-        }
-        .card-info{
-            @extend .card-title;
-            font-size: 1.5rem;
-        }
-        .card-link{
-            a{
-                @extend .card-info;
-                text-decoration: none;
+            .card-info{
+                @extend .card-title;
+                font-size: 1rem;
+                padding: .5rem;
+            }
+            .card-link{
+                
+                a{
+                    @extend .card-info;
+                    text-decoration: none;
+                    &:hover{
+                        color: green
+                    }
+                }
             }
         }
     }
