input field added

--- a/src/components/sass/form/form.css
+++ b/src/components/sass/form/form.css
@@ -26,4 +26,14 @@
   border: .4rem solid black;
   font-size: 3rem;
 }
+
+.form button {
+  width: 10rem;
+  height: 3rem;
+  font-size: 2rem;
+  border: 4px solid black;
+  border-radius: 1rem;
+  cursor: pointer;
+  background-color: aqua;
+}
 /*# sourceMappingURL=form.css.map */
