--- a/src/components/sass/form/form.scss
+++ b/src/components/sass/form/form.scss
@@ -18,4 +18,13 @@
         border: .4rem solid black;
         font-size: 3rem;
     }
+    button{
+        width: 10rem;
+        height: 3rem;
+        font-size: 2rem;
+        border: 4px solid black;
+        border-radius: 1rem;
+        cursor: pointer;
+        background-color: aqua;
+    }
 }
