--- a/src/components/sass/form/form.css
+++ b/src/components/sass/form/form.css
@@ -1,4 +1,4 @@
-.form {
+.form form {
   width: 90vw;
   height: 70vh;
   display: -webkit-box;
@@ -15,11 +15,12 @@
           align-items: center;
 }
 
-.form h1 {
+.form form h1 {
   font-size: 4rem;
 }
 
-.form input {
+.form form input {
+  margin: 1rem;
   width: 25rem;
   height: 3rem;
   border-radius: 1rem;
@@ -27,7 +28,7 @@
   font-size: 3rem;
 }
 
-.form button {
+.form form button {
   width: 10rem;
   height: 3rem;
   font-size: 2rem;
