--- a/src/components/sass/form/form.scss
+++ b/src/components/sass/form/form.scss
@@ -1,18 +1,20 @@
 .form{
-    width: 90vw;
-    height: 70vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around; 
-    align-items: center;
+    form{
 
-
-    h1{
-        font-size: 4rem;
-
-    }
-    input{
-        width: 25rem;
+        width: 90vw;
+        height: 70vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around; 
+        align-items: center;
+        
+        h1{
+            font-size: 4rem;
+            
+        }
+        input{
+            margin: 1rem;
+            width: 25rem;
         height: 3rem;
         border-radius: 1rem;
         border: .4rem solid black;
@@ -27,4 +29,5 @@
         cursor: pointer;
         background-color: aqua;
     }
+}
 }
