--- a/src/components/sass/accordation/accordation.css
+++ b/src/components/sass/accordation/accordation.css
@@ -1,40 +1,22 @@
-.main-container {
+.accordation-main {
   width: 90vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
-.main-container .accord-main {
-  width: 40vw;
-  background-color: blueviolet;
+.accordation-main .accordation-container {
+  background-color: white;
 }
 
-.main-container .accord-main h1 span {
-  color: white;
+.accordation-main .accordation-container h1 span {
+  color: green;
   cursor: pointer;
   font-size: 3rem;
   margin: .5rem;
 }
 
-.main-container .accord-main p {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: white;
-  background-color: black;
+.accordation-main .accordation-container p {
+  text-align: center;
+  color: black;
+  background-color: whitesmoke;
   font-size: 3rem;
 }
 /*# sourceMappingURL=accordation.css.map */
