--- a/src/components/sass/Inc/inc.scss
+++ b/src/components/sass/Inc/inc.scss
@@ -7,7 +7,7 @@
 
     .center-inc{
         width: 30vw;
-        height: 60vh;
+        // height: 60vh;
         background-color: green;
         display: flex;
         justify-content: center;
@@ -26,6 +26,10 @@
             cursor: pointer;
             height: 4rem;
             font-size: 2rem;
+
+            &:last-child{
+                margin-bottom: 1rem;
+            }
         }
     }
 
